Release history for Dist-Zilla-Plugin-INI-Baked

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.002000, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +5 ↑1 -2 (recommends: +1, suggests: ↑2)
 - test: +1 (recommends: ↑2)

0.002000 2014-09-02T08:08:38Z
 [00 Minor]
 - Add dump_config
 - tests refactored.
 - metadata

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)
 - runtime: +1
 - test: +1

 [Metadata]
 - Set author = kentnl

 [Tests]
 - implemented now in dztest

0.001001 2014-08-15T21:16:43Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - whitespace reduced.

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

0.001000 2014-08-03T06:41:00Z
 - First version.
