@@ -207,4 +207,7 @@ Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
 
-[Prereqs]
+[Prereqs / ExpandINI With Comments]
+-phase = test
+-relationship = recommends
+Dist::Zilla::Util::ExpandINI = 0.003000
