@@ -14,7 +14,11 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Test::EOL
  - Test::More
 
+ [Added / test recommends]
+ - Dist::Zilla::Util::ExpandINI 0.003000
+
  [Added / test requires]
+ - Test::Requires
  - perl 5.008
 
  [Changed / configure recommends]
