@@ -1,6 +1,9 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002001
+ [Added / test recommends]
+ - Dist::Zilla::Util::ExpandINI 0.003000
+
  [Changed / configure recommends]
  - ExtUtils::MakeMaker 6.98 → 7.04
 
