@@ -1,11 +1,15 @@
 Release history for Dist-Zilla-Plugin-INI-Baked
 
 {{$NEXT}}
+ [Bugfix]
+ - Adjust test to only operate with latest ExpandINI
+ - Adjust test to expect comment-copy
+
  [Dependencies::Stats]
  - Dependencies changed since 0.002000, see misc/*.deps* for details
  - configure: +1 (recommends: ↑1)
  - develop: +5 ↑1 -2 (recommends: +1, suggests: ↑2)
- - test: +1 (recommends: ↑2)
+ - test: +2 (recommends: +1 ↑2)
 
 0.002000 2014-09-02T08:08:38Z
  [00 Minor]
